--- a/index.html
+++ b/index.html
@@ -430,10 +430,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
-						<li><a href="#" class="icon solid fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a href="https://twitter.com/DhanpalRaj1998" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://github.com/dhanpalrajpurohit" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://medium.com/@rajpurohitdhanpal" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
+						<li><a href="https://www.linkedin.com/in/dhanpal-rajpurohit/" class="icon solid fa-linkedin"><span class="label">Linkedin</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Dhanpal Singh Rajpurohit</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
