--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="images/avatar.jpg" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Dhanpal Singh Rajpurohit.</strong><br/> Software Developer.<br />
 					Surat,Gujarat<br />
 				</div>
