--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Hi,I'm Dhanpal.<br />
-							Web, Computer Vison Developer and Open Source Enthusiast.</h2>
+							<h2>Hi,I'm Dhanpal Singh.<br />
+							Web Developer and Computer Vision Enthusiast</h2>
 						</header>
-						<p>I'm graduated in Bacholer of Science(Computer Science) and working as Software Developer. During My Graduation, I explored and learnt.I learnt Computer Vision - Deep Learning and Web Development.Now, I'm working with Python and Node.js.</p>
+						<p>I'm purchasing Master of Computer Application. I have decent knowledge about web developing and image processing skill. I used Python(Flask/Django)as backend programming language and javascript for frontend.</p>
+						<p>Also familiar with HTML,CSS and Bootstrap.Apart from coding, I writes blogs on medium.com and also have a <a href="">youtube channel</a>.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
